Werkende camera tracking en meer, moet nog getest worden op PSP

--- a/DumbassThief/PSP_Debug/BuildLog.htm
+++ b/DumbassThief/PSP_Debug/BuildLog.htm
@@ -12,22 +12,50 @@ Build Log
 </pre></table><table width=100% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 Output Window
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/Character.cpp"
+ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/main.cpp"
+c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/main.cpp(32,15): warning 0178: variable "cont" was declared but never referenced
 ProDG Linking "PSP_Debug/tempprx.obj"
 pspld 2.7.63.0 @ C:\Program Files\SN Systems\PSP\bin\pspld.exe
 Unknown Source File(1) : warning: L0019:Symbol 'pix_Thief' multiply defined.
-Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\GameEngine.obj
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\GameEngine.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'level_size' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\GameEngine.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'level_one' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\GameEngine.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'pix_Thief' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\main.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'level_size' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\main.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'level_one' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\main.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'GameEngine::s_instance' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\main.obj.
 Unknown Source File(1) : warning: L0019:Symbol 'pix_Thief' multiply defined.
-Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\GameEngine.obj
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\MenuState.obj.
-Unknown Source File(1) : warning: L0019:Symbol 'pix_Thief' multiply defined.
-Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\GameEngine.obj
-Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'level_size' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\MenuState.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'level_one' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\MenuState.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'level_size' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Tilemap.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'level_one' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Tilemap.obj.
 Generating Debug PRX "c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\DumbassThief.prx"
 </pre></table><table width=100% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 Results
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-DumbassThief - 0 error(s), 9 warning(s)
+DumbassThief - 0 error(s), 37 warning(s)
 </pre></table><table width=100% height=20 bgcolor=#CFCFE5><tr><td><font face=arial size=+2>
 </font></table></body></html>
