Werkende tilemap, camera en playermovement

--- a/DumbassThief/PSP_Debug/BuildLog.htm
+++ b/DumbassThief/PSP_Debug/BuildLog.htm
@@ -12,10 +12,14 @@ Build Log
 </pre></table><table width=100% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 Output Window
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/Tilemap.cpp"
+ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/Character.cpp"
+c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/Character.cpp(26,37): warning 0176: subscript out of range
 ProDG Linking "PSP_Debug/tempprx.obj"
 pspld 2.7.63.0 @ C:\Program Files\SN Systems\PSP\bin\pspld.exe
 Unknown Source File(1) : warning: L0019:Symbol 'pix_Thief' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\GameEngine.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'collisionIndex' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\GameEngine.obj.
 Unknown Source File(1) : warning: L0019:Symbol 'level_size' multiply defined.
@@ -25,6 +29,9 @@ Unknown Source File(1) : warning: L0019:Symbol 'level_one' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\GameEngine.obj.
 Unknown Source File(1) : warning: L0019:Symbol 'pix_Thief' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\main.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'collisionIndex' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\main.obj.
 Unknown Source File(1) : warning: L0019:Symbol 'level_size' multiply defined.
@@ -39,12 +46,18 @@ Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual 
 Unknown Source File(1) : warning: L0019:Symbol 'pix_Thief' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\MenuState.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'collisionIndex' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\MenuState.obj.
 Unknown Source File(1) : warning: L0019:Symbol 'level_size' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\MenuState.obj.
 Unknown Source File(1) : warning: L0019:Symbol 'level_one' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\MenuState.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'collisionIndex' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Tilemap.obj.
 Unknown Source File(1) : warning: L0019:Symbol 'level_size' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Tilemap.obj.
@@ -55,6 +68,6 @@ Generating Debug PRX "c:\Users\Robin\Documents\Visual Studio 2005\Projects\Dumba
 </pre></table><table width=100% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 Results
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-DumbassThief - 0 error(s), 36 warning(s)
+DumbassThief - 0 error(s), 49 warning(s)
 </pre></table><table width=100% height=20 bgcolor=#CFCFE5><tr><td><font face=arial size=+2>
 </font></table></body></html>
