--- a/DumbassThief/PSP_Debug/BuildLog.htm
+++ b/DumbassThief/PSP_Debug/BuildLog.htm
@@ -12,7 +12,7 @@ Build Log
 </pre></table><table width=100% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 Output Window
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/MenuState.cpp"
+ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/EnemySpawner.cpp"
 ProDG Linking "PSP_Debug/tempprx.obj"
 pspld 2.7.63.0 @ C:\Program Files\SN Systems\PSP\bin\pspld.exe
 Unknown Source File(1) : warning: L0019:Symbol 'pix_menu' multiply defined.
@@ -51,6 +51,9 @@ Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual 
 Unknown Source File(1) : warning: L0019:Symbol 'level_one' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\MenuState.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'pix_Granny' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\garbageLevel.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\MenuState.obj.
 Unknown Source File(1) : warning: L0019:Symbol 'GameEngine::s_instance' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\MenuState.obj.
@@ -63,10 +66,16 @@ Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual 
 Unknown Source File(1) : warning: L0019:Symbol 'level_one' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Tilemap.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'pix_Granny' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\garbageLevel.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\EnemySpawner.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'pix_Granny' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\garbageLevel.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Enemy.obj.
 Generating Debug PRX "c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\DumbassThief.prx"
 </pre></table><table width=100% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 Results
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-DumbassThief - 0 error(s), 48 warning(s)
+DumbassThief - 0 error(s), 57 warning(s)
 </pre></table><table width=100% height=20 bgcolor=#CFCFE5><tr><td><font face=arial size=+2>
 </font></table></body></html>
