--- a/DumbassThief/PSP_Debug/BuildLog.htm
+++ b/DumbassThief/PSP_Debug/BuildLog.htm
@@ -12,8 +12,6 @@ Build Log
 </pre></table><table width=100% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 Output Window
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/Character.cpp"
-c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/Character.cpp(25,37): warning 0176: subscript out of range
 ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/garbageLevel.cpp"
 ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/MenuState.cpp"
 ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/EnemySpawner.cpp"
@@ -37,6 +35,9 @@ Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual St
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\garbageLevel.obj.
 Unknown Source File(1) : warning: L0019:Symbol 'pix_menu' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\garbageLevel.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'pix_menu' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\main.obj.
 Unknown Source File(1) : warning: L0019:Symbol 'GameEngine::s_instance' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
@@ -83,6 +84,12 @@ Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual 
 Unknown Source File(1) : warning: L0019:Symbol 'level_one' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\EnemySpawner.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'pix_menu' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\EnemySpawner.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'pix_Thief' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\EnemySpawner.obj.
 Unknown Source File(1) : warning: L0019:Symbol 'pix_Granny' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\garbageLevel.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Enemy.obj.
@@ -95,10 +102,19 @@ Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual 
 Unknown Source File(1) : warning: L0019:Symbol 'level_one' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Enemy.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'pix_menu' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Enemy.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'pix_Thief' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Enemy.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'GameEngine::s_instance' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\Enemy.obj.
 Generating Debug PRX "c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_Debug\DumbassThief.prx"
 </pre></table><table width=100% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 Results
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-DumbassThief - 0 error(s), 75 warning(s)
+DumbassThief - 0 error(s), 92 warning(s)
 </pre></table><table width=100% height=20 bgcolor=#CFCFE5><tr><td><font face=arial size=+2>
 </font></table></body></html>
