--- a/DumbassThief/PSP_DebugOpt/BuildLog.htm
+++ b/DumbassThief/PSP_DebugOpt/BuildLog.htm
@@ -12,13 +12,15 @@ Build Log
 </pre></table><table width=100% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 Output Window
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/Character.cpp"
-c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/Character.cpp(25,37): warning 0176: subscript out of range
 ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/garbageLevel.cpp"
+ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/main.cpp"
+c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/main.cpp(60,34): warning 0176: subscript out of range
+c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\main.cpp(62,34): warning 0176: subscript out of range
+c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\main.cpp(28,15): warning 0178: variable "cont" was declared but never referenced
 ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/MenuState.cpp"
-ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/Tilemap.cpp"
 ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/Enemy.cpp"
 ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/EnemySpawner.cpp"
+ProDG Compiling "c:/Users/Robin/Documents/Visual Studio 2005/Projects/DumbassThief/DumbassThief/StealableObject.cpp"
 ProDG Linking "PSP_DebugOpt/tempprx.obj"
 pspld 2.7.63.0 @ C:\Program Files\SN Systems\PSP\bin\pspld.exe
 Unknown Source File(1) : warning: L0019:Symbol 'pix_menu' multiply defined.
@@ -354,10 +356,16 @@ Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual 
 Unknown Source File(1) : warning: L0019:Symbol 'pix_Thief' multiply defined.
 Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_DebugOpt\Character.obj
 Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_DebugOpt\EnemySpawner.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'pix_Thief' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_DebugOpt\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_DebugOpt\StealableObject.obj.
+Unknown Source File(1) : warning: L0019:Symbol 'pix_cat' multiply defined.
+Unknown Source File(1) : warning: ...First in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_DebugOpt\Character.obj
+Unknown Source File(1) : warning: ...and now in c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_DebugOpt\StealableObject.obj.
 Generating Debug PRX "c:\Users\Robin\Documents\Visual Studio 2005\Projects\DumbassThief\DumbassThief\PSP_DebugOpt\DumbassThief.prx"
 </pre></table><table width=100% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 Results
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>
-DumbassThief - 0 error(s), 333 warning(s)
+DumbassThief - 0 error(s), 340 warning(s)
 </pre></table><table width=100% height=20 bgcolor=#CFCFE5><tr><td><font face=arial size=+2>
 </font></table></body></html>
